objects/ASI_CRM_Investment_Guidelines_Thresholds__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Action_Grade__c</fullName>
        <label>Action Grade</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_From_Recommended_CM__c</fullName>
        <label>Recommended CM-From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Recommended_CM__c</fullName>
        <formula>Text(ASI_CRM_From_Recommended_CM__c * 100) + &quot; - &quot; +  Text(ASI_CRM_To_Recommended_CM__c * 100) + &quot;%&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recommended CM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_To_Recommended_CM__c</fullName>
        <label>Recommended CM-To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Ultra_Premium_Share_Volume__c</fullName>
        <label>Minimum Ultra Premium Share Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Investment Guidelines Thresholds</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IGT-{0000}</displayFormat>
        <label>Investment guidelines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Guidelines Thresholds</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_Investment_Guidelines_Thresholds_Type</fullName>
        <active>true</active>
        <label>ASI CRM Investment Guidelines Thresholds Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>